[package]
name = "microcouch"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.26"
futures-batch = "0.6.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["io-util"] }
tokio-util = { version = "0.7.7", features = ["io"] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
