[package]
name = "microcouch"
description = "embeddable minimalistic CouchDB implementation"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
authors = ["Johannes J. Schmidt <schmidt@pm.me>"]
keywords = ["CouchDB", "database"]

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
futures-batch = "0.6.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rusqlite = { version = "0.28.0", features = ["serde_json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-util = { version = "0.7.10", features = ["io"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"
reqwest = { version = "0.11.14", features = ["blocking"] }
