[package]
name = "microcouch"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.30"
futures-batch = "0.6.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-util = { version = "0.7.10", features = ["io"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
